--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.settings.webAllowOthers=true
 server.port=8080
+spring.jpa.hibernate.ddl-auto=update
