--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Jakarta Persistence API for JPA -->
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
